Add feature to find a station by its id